--- a/src/app/admin-auth/pages/admin-add-product/admin-add-product.component.html
+++ b/src/app/admin-auth/pages/admin-add-product/admin-add-product.component.html
@@ -27,7 +27,7 @@
       />
 
       <textarea
-        class="form-input"
+        class="description form-input"
         type="text"
         ngModel
         name="description"
