--- a/src/app/admin-auth/pages/admin-auth/admin-auth.component.html
+++ b/src/app/admin-auth/pages/admin-auth/admin-auth.component.html
@@ -34,7 +34,7 @@
 
   <!-- Login -->
 
-    <h1>Admin Login</h1>
+    <h1 class="mb-5">Ingrese sus datos</h1>
     <p class="error-p">{{ authError }}</p>
     <form
       #adminLogin="ngForm"
