--- a/src/app/admin-auth/pages/admin-auth/admin-auth.component.css
+++ b/src/app/admin-auth/pages/admin-auth/admin-auth.component.css
@@ -1,3 +1,4 @@
+
 .signup{
     text-align: center;
     margin-bottom: 50px;
@@ -9,4 +10,64 @@
     cursor: pointer;
     margin-top: 20px;
     color: orange;
+}
+
+.form-button{
+    border-radius: 1px;
+    border: 1px solid black;
+    background-color: #EF8F18;
+    font-weight: bold;
+}
+
+@media (min-width: 576px) {
+    .form-input{
+        font-size: 18px ;
+        height: 43px;
+    }
+    .common-form{
+        width: 60%;
+    }
+    .form-button{
+        height: 35px;
+        font-size: 18px;
+        border-radius: 1px;
+        border: 1px solid #EF8F18;
+        background-color: #EF8F18;
+    }
+}
+    
+@media (min-width: 768px) {
+  
+}
+    
+@media (min-width: 992px) {
+    .form-input{
+        font-size: 20px ;
+        height: 50px;
+    }
+
+    .common-form{
+        width: 52%;
+    }
+
+    .form-button{
+        height: 40px;
+        font-size: 20px;
+        border-radius: 1px;
+        border: 1px solid #EF8F18;
+        background-color: #EF8F18;
+    }
+}
+    
+@media (min-width: 1200px) {
+    .common-form{
+        width: 45%;
+    }
+    
+}
+    
+    @media (min-width: 1400px) {
+        .common-form{
+            width: 40%;
+        }
 }
