Styles were added and some errors were fixed

--- a/src/app/admin-auth/pages/admin-add-product/admin-add-product.component.html
+++ b/src/app/admin-auth/pages/admin-add-product/admin-add-product.component.html
@@ -1,48 +1,65 @@
 <div class="add-product">
-    <h1>Agregue un nuevo producto</h1>
-    <p class="p-message">{{ addProductMessage }}</p>
-    <form #addProduct="ngForm" (ngSubmit)="submit(addProduct.value)" class="common-form">
+  <h1>Agregue un nuevo producto</h1>
+  <p class="p-message">{{ addProductMessage }}</p>
+  <form
+    #addProduct="ngForm"
+    (ngSubmit)="submit(addProduct.value)"
+    class="common-form"
+  >
+    <input
+      class="form-input"
+      type="text"
+      ngModel
+      name="name"
+      placeholder="Ingrese nombre del producto"
+    />
+
+    <input
+      class="form-input"
+      type="text"
+      ngModel
+      name="price"
+      placeholder="Ingrese precio del producto"
+    />
+
+    <input
+      class="form-input"
+      type="text"
+      ngModel
+      name="category"
+      placeholder="Ingrese categoria del producto"
+    />
+
+    <textarea
+      class="description form-input"
+      type="text"
+      ngModel
+      name="description"
+      placeholder="Ingrese descripcion del producto"
+    ></textarea>
+
+    <input
+      class="form-input"
+      type="text"
+      ngModel
+      name="image"
+      placeholder="Ingrese URL de la imagen del producto"
+    />
+
+      <div class="form-check">
         <input
-        class="form-input"
-        type="text"
-        ngModel
-        name="name"
-        placeholder="Ingrese nombre del producto"
-      />
+          class="form-check-input"
+          type="checkbox"
+          ngModel
+          name="popular"
+          id="flexCheckDefault"
+        />
+        <label class="form-check-label" for="flexCheckDefault"
+          >Producto popular</label
+        >
+      </div>
 
-      <input
-        class="form-input"
-        type="text"
-        ngModel
-        name="price"
-        placeholder="Ingrese precio del producto"
-      />
 
-      <input
-        class="form-input"
-        type="text"
-        ngModel
-        name="category"
-        placeholder="Ingrese categoria del producto"
-      />
-
-      <textarea
-        class="description form-input"
-        type="text"
-        ngModel
-        name="description"
-        placeholder="Ingrese descripcion del producto"
-      ></textarea>
-
-      <input
-        class="form-input"
-        type="text"
-        ngModel
-        name="image"
-        placeholder="Ingrese URL de la imagen del producto"
-      />
-
-      <button class="form-button">Agregar Producto</button>
-
-    </form>
+    <button class="form-button">Agregar Producto</button>
+  </form>
 </div>
