--- a/src/app/site-layout/header/header.component.html
+++ b/src/app/site-layout/header/header.component.html
@@ -116,7 +116,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link item text-decoration-none" routerLink="/main">
+          <a class="nav-link item text-decoration-none" routerLink="/product-list">
             <p>MENÚ</p>
           </a>
         </li>
@@ -162,7 +162,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link item text-decoration-none" routerLink="/main">
+              <a class="nav-link item text-decoration-none" routerLink="/product-list">
                 <p>MENÚ</p>
               </a>
             </li>
