--- a/src/app/admin-auth/pages/admin-update-product/admin-update-product.component.html
+++ b/src/app/admin-auth/pages/admin-update-product/admin-update-product.component.html
@@ -45,6 +45,19 @@
         name="image"
         placeholder="Ingrese URL de la imagen del producto"
       />
+
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          ngModel
+          name="popular"
+          id="flexCheckDefault"
+        />
+        <label class="form-check-label" for="flexCheckDefault"
+          >Producto popular</label
+        >
+      </div>
   
       <button class="form-button">Update Producto</button>
     </form>
