--- a/src/app/products/pages/product-list/product-list.component.css
+++ b/src/app/products/pages/product-list/product-list.component.css
@@ -1,3 +1,8 @@
+.card-img-top{
+    max-width: 100%;
+    height: 190px;
+}
+
 .product-header-img{
     object-fit: contain;
     background-color: black;
@@ -42,10 +47,6 @@
     display: flex;
     justify-content: space-between;
     padding: 10px;
-}
-
-.cards-container{
-    margin: 20px;
 }
 
 .trendy-card-footer {
