--- a/src/app/site-layout/header/header.component.html
+++ b/src/app/site-layout/header/header.component.html
@@ -65,7 +65,11 @@
               <span class="add-product">Home</span>
             </a>
             <a class="nav-link nav-user-img" routerLink="/user-auth">
-              <span class="product-list">Carrito de compras</span>
+              <span class="cart-container">
+                <fa-icon class="cart-icon" [icon]="cartIcon"></fa-icon>
+                ({{ cartProducts }})
+              </span>
+              
             </a>
             <div ngbDropdown class="d-inline-block">
               <a class="user-name" id="dropdownBasic1" ngbDropdownToggle>
